--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -134,8 +134,11 @@ Version 5.0
 * Added benchmarks for fuzzylite in Linux
 * Created the FuzzyLite Interactive Console
 * Added basic rule chaining such that Output Variables can be utilized as antecedents
-* Added two examples for rule chaining
+* Added two examples for rule chaining: mamdani/Laundry.fll and mamdani/SimpleDimmerInverse.fll
 * Added Term::(get|set)Height and changed all terms accordingly
+* Renamed method Op::makeValidId to Op::validName, which now returns "unnamed" for empty strings.
+* Converted examples/original/*.fis to examples/original/*.fll
+
 
 Version 4.0
 * FuzzyRule merged with Rule, and FuzzyRule deleted.
