C++11 Identifiers: override, final, default, delete, noexcept. Unix automatic build script.

--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -148,10 +148,12 @@ Version 5.0
 * Exceptions are thrown when Conjunction, Disjunction, Activation and Accumulation operators are NULL when they are required
 * Exception is thrown when Defuzzifier is required and not set.
 * Added support for C++11 utilizing smart pointers, identifiers (override, noexcept), and delete identifiers to DISABLE_COPY(Class)
-* Added macro FL_unique_ptr to refer to std::auto_ptr (C++98) or std::unique_ptr (C++11)
+* Macros for identifiers are FL_IOVERRIDE, FL_IFINAL, FL_IDEFAULT, FL_IDELETE, and FL_INOEXCEPT (fl/fuzzylite.h)
+* Added macro FL_unique_ptr to refer to std::auto_ptr (C++98) or std::unique_ptr (C++11), and its respective FL_move_ptr(x) to move a smart pointer.
 * Added constant fl::null to refer to 0L (C++98) or nullptr (C++11)
-* Added macros FL_DEFAULT_COPY(Class), FL_DEFAULT_MOVE(Class),and FL_DEFAULT_COPY_AND_MOVE(Class) for default copy and move constructors and operators
-
+* Added macros FL_DEFAULT_COPY(Class), FL_DEFAULT_MOVE(Class), and FL_DEFAULT_COPY_AND_MOVE(Class) for default copy and move constructors and operators
+* Added build.sh to build fuzzylite
+* Changed default to fuzzylite::_macheps = 1e-6;
 
 Version 4.0
 * FuzzyRule merged with Rule, and FuzzyRule deleted.
