--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,9 @@ Version 6.0
 * Added option to lock value in range to InputVariables by refactoring OutputVariable::lockValueInRange to Variable::lockValueInRange
 * Updated the FuzzyLite Language to account for InputVariable::lock-range 
 * Updated examples to account for InputVariable::lock-range
+* Renamed RuleBlock::activation operator to RuleBlock::implication
+* Renamed Activated::activation operator to Activated::implication
+* Updated FllImport and FllExport to refer to implication instead of activation
 
 
 
