--- a/examples/notebook/Example.ipynb
+++ b/examples/notebook/Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "65332d8b",
    "metadata": {},
    "outputs": [
@@ -18,13 +18,13 @@
       "[ 83%] Built target fl-obj\n",
       "gmake[3]: Entering directory '/install/build'\n",
       "gmake[3]: Leaving directory '/install/build'\n",
-      "[ 84%] Built target fl-shared\n",
+      "[ 83%] Built target fl-shared\n",
       "gmake[3]: Entering directory '/install/build'\n",
       "gmake[3]: Leaving directory '/install/build'\n",
-      "[ 99%] Built target fl-test\n",
+      "[ 98%] Built target fl-test\n",
       "gmake[3]: Entering directory '/install/build'\n",
       "gmake[3]: Leaving directory '/install/build'\n",
-      "[100%] Built target fl-bin\n",
+      "[ 99%] Built target fl-bin\n",
       "gmake[3]: Entering directory '/install/build'\n",
       "gmake[3]: Leaving directory '/install/build'\n",
       "[100%] Built target fl-static\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f6254062",
    "metadata": {},
    "outputs": [],
@@ -184,32 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d513faa7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Engine: XXX\""
+       "\"Engine: ObstacleAvoidance\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fl::Engine(\"XXX\").toString()"
+    "fl::Engine(\"ObstacleAvoidance\").toString()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9aee8f66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
