--- a/examples/notebook/Example.ipynb
+++ b/examples/notebook/Example.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e7de45bd",
+   "metadata": {},
+   "source": [
+    "Build and run Jupyter Notebook server from `/fuzzylite` as:\n",
+    "\n",
+    "```bash\n",
+    "make jupyter\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "f6254062",
    "metadata": {},
    "outputs": [],
@@ -18,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d513faa7",
    "metadata": {},
    "outputs": [],
@@ -28,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a1c1dd33",
+   "execution_count": 3,
+   "id": "fc991592",
    "metadata": {},
    "outputs": [
     {
@@ -70,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "0922746a",
+   "execution_count": 4,
+   "id": "e12835eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "d26375ea",
+   "execution_count": 5,
+   "id": "c9dc84c6",
    "metadata": {},
    "outputs": [
     {
@@ -121,12 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "ed7572c6",
+   "execution_count": 6,
+   "id": "f97954ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "delete engine"
+    "delete engine;"
    ]
   }
  ],
